# Self-RAG-and-INSIDE-System-for-Legal-Analysis

./: .gitignore  GUIDE.md  INSIDE_FILES_MANIFEST.txt  README.md  WORKFLOW.md  final_report_update_guide.md  pyproject.toml  requirements.txt
configs/: critic_config.yaml  generator_config.yaml  inside_config.yaml  legalbench_config.yaml
data/samples/: sample_documents.json  sample_qa_data.json  sample_test_queries.json
notebooks/: 00_getting_started.ipynb  01_data_preparation.ipynb  02_retrieval_pipeline.ipynb  03_self_rag_training.ipynb  04_evaluation.ipynb  05_demo.ipynb  06_inside_eigenscore.ipynb  07_intent_aware_retrieval.ipynb  08_combined_system.ipynb  09_legalbench_benchmark.ipynb  09_legalbench_retrieval.ipynb  10_legalbench_pretrained_selfrag.ipynb  10_legalbench_training.ipynb  11_legalbench_generation.ipynb  1_legalbench_retrieval.ipynb  2_legalbench_pretrained_selfrag.ipynb  3_legalbench_generation.ipynb  README.md
scripts/: generate_legalbench_labels.py
src/data/: __init__.py
src/evaluation/: generation_eval.py  inside_eval.py  legalbench_eval.py  legalbench_generation_eval.py  retrieval_eval.py
src/inside/: __init__.py  eigenscore.py  feature_clipping.py  hallucination_detector.py  intent_detector.py  internal_states.py
src/retrieval/: chunking.py  inside_retriever.py  retriever.py
src/self_rag/: critic.py  generator.py  gguf_inference.py  inference.py  inside_generator.py  reflection_tokens.py
src/training/: generate_labels.py  train_critic_qlora.py  train_generator_qlora.py
src/utils/: __init__.py  device_utils.py
tests/: test_chunk_positions.py  test_gguf_inference.py  test_llama_direct.py
